--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </svg>
             </a>
             <div class="Navbar-items">
-                <a class="Navbar-item Navbar-modalToggle">
+                <a class="Navbar-item Navbar-modalToggle" href="https://playoverwatch.com/ko-kr/about/">
                     <div class="Navbar-label">게임
                     </div>
                     <div class="Navbar-dropdownIcon">
